--- a/collect_app/src/main/res/layouts/fieldsight/layout/fragment_project_sites.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/fragment_project_sites.xml
@@ -9,7 +9,8 @@
     <ViewSwitcher
         android:id="@+id/switcher"
         android:layout_width="match_parent"
-        android:padding="16dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
         android:layout_height="wrap_content">
 
 
@@ -58,6 +59,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_project_sitelist"
         android:layout_width="match_parent"
+        android:layout_marginTop="4dp"
         android:layout_height="wrap_content" />
 
 
