--- a/collect_app/src/main/res/menu/menu_main.xml
+++ b/collect_app/src/main/res/menu/menu_main.xml
@@ -6,29 +6,25 @@
         android:icon="@drawable/ic_notifications_white"
         android:orderInCategory="100"
         android:title="@string/menu_title_notification"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/action_refresh"
         android:icon="@drawable/ic_refresh_white_2"
         android:title="@string/menu_title_sync"
-        app:showAsAction="ifRoom" />
-
-    <item
-        android:visible="false"
-        android:id="@+id/action_filter"
-        android:icon="@drawable/ic_filter_list"
-        android:title="@string/menu_title_filter_sites"
+        android:orderInCategory="101"
         app:showAsAction="never" />
 
     <item
         android:id="@+id/action_app_settings"
         android:title="@string/menu_title_settings"
+        android:orderInCategory="103"
         app:showAsAction="never" />
 
     <item
         android:id="@+id/action_logout"
         android:title="@string/menu_title_logout"
+        android:orderInCategory="104"
         app:showAsAction="never" />
 
 
