issues with forms count fixed

--- a/collect_app/src/main/res/layouts/fieldsight/layout/fragment_project_submission.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/fragment_project_submission.xml
@@ -1,18 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
+        android:id="@+id/ll_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
+            app:tabIndicatorHeight="0dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:minHeight="?attr/actionBarSize">
+            app:tabGravity="fill"
+            android:layout_marginTop="4dp"
+            app:tabMode="scrollable"
+            app:tabPaddingStart="8dp"
+            app:tabPaddingEnd="8dp"
+            app:tabTextAppearance="@style/MyTabLayoutTextAppearance"
+            app:tabBackground="@drawable/rounded_rectangle_border_highlight"
+            android:minHeight="32dp">
 
             <com.google.android.material.tabs.TabItem
                 android:layout_width="wrap_content"
@@ -42,7 +52,8 @@
         android:id="@+id/tv_error"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_below="@id/ll_main"
+        android:layout_marginTop="32dp"
         android:text="Submissions not available for this form type"
         android:textColor="@color/text_primary"
         android:textSize="16sp" />
