--- a/collect_app/src/main/res/layouts/fieldsight/layout/fragment_project_users.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/fragment_project_users.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:textSize="16sp"
         android:layout_centerInParent="true"
-        android:visibility="visible"
+        android:visibility="gone"
         android:text="No user loaded, please try again when you are online"
         android:textColor="@color/text_primary"/>
 
