--- a/collect_app/src/main/res/layouts/fieldsight/layout/activity_project_dashboard.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/activity_project_dashboard.xml
@@ -37,7 +37,9 @@
                     android:layout_height="wrap_content"
                     android:background="@color/new_design_blue"
                     android:orientation="vertical"
-                    android:padding="16dp"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:paddingBottom="16dp"
                     app:layout_collapseMode="parallax">
 
                     <LinearLayout
