ui fixed for nodata

--- a/collect_app/src/main/res/layouts/fieldsight/layout/fragment_project_submission.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/fragment_project_submission.xml
@@ -49,8 +49,8 @@
         android:id="@+id/tv_error"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/ll_main"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="120dp"
+        android:layout_centerHorizontal="true"
         android:text="Submissions not available for this form type"
         android:textColor="@color/text_primary"
         android:textSize="16sp" />
