--- a/collect_app/src/main/res/layouts/fieldsight/layout/fragment_project_sites.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/fragment_project_sites.xml
@@ -34,11 +34,9 @@
 
             <ImageView
                 android:id="@+id/iv_search"
-                android:layout_width="wrap_content"
+                android:layout_width="60dp"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="16dp"
-                app:srcCompat="@drawable/ic_search_minor"
-                android:layout_marginEnd="16dp" />
+                app:srcCompat="@drawable/ic_search_minor" />
 
             <ImageView
                 android:id="@+id/iv_filter"
