--- a/collect_app/src/main/res/drawable/ic_circle_tick_outline_minor.xml
+++ b/collect_app/src/main/res/drawable/ic_circle_tick_outline_minor.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="15dp"
-    android:height="15dp"
-    android:viewportWidth="15"
-    android:viewportHeight="15">
+    android:width="8dp"
+    android:height="6dp"
+    android:viewportWidth="8"
+    android:viewportHeight="6">
   <path
-      android:pathData="M7.5,15A7.5,7.5 0,1 1,15 7.5,7.509 7.509,0 0,1 7.5,15m0,-13.125A5.625,5.625 0,1 0,13.125 7.5,5.631 5.631,0 0,0 7.5,1.875m-0.937,8.438a0.935,0.935 0,0 1,-0.663 -0.275L4.025,8.163A0.937,0.937 0,0 1,5.35 6.837l1.212,1.212L9.65,4.962a0.937,0.937 0,0 1,1.326 1.326l-3.75,3.75a0.935,0.935 0,0 1,-0.663 0.275"
-      android:fillColor="#002467"/>
+      android:pathData="M3,6a1,1 0,0 1,-0.707 -0.293l-2,-2A1,1 0,1 1,1.707 2.293L3,3.586l3.293,-3.293a1,1 0,0 1,1.414 1.414l-4,4A1,1 0,0 1,3 6"
+      android:fillColor="#fff"/>
 </vector>
