sync button show hide fixed

--- a/collect_app/src/main/res/layouts/fieldsight/layout/layout_simple_recycler_with_nodata.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/layout_simple_recycler_with_nodata.xml
@@ -79,7 +79,9 @@
                 android:background="@color/new_design_blue"
                 android:gravity="center"
                 android:padding="8dp"
+                android:minHeight="48dp"
                 android:text="Sync Now"
+                android:layout_marginBottom="8dp"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.SyncProjectsSubtitle"
                 android:textColor="@color/white"
                 android:visibility="visible" />
