--- a/collect_app/src/main/res/layouts/fieldsight/layout/layout_simple_recycler_with_nodata.xml
+++ b/collect_app/src/main/res/layouts/fieldsight/layout/layout_simple_recycler_with_nodata.xml
@@ -14,15 +14,17 @@
 <!--        android:layout_width="match_parent"-->
 <!--        android:layout_height="wrap_content">-->
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_projectlist_syncing"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_projectlist_syncing"
+                android:layout_width="match_parent"
+                android:layout_above="@id/rv_projectlist"
+                android:layout_height="wrap_content"/>
 
 
             <androidx.recyclerview.widget.RecyclerView
